--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/student
-spring.datasource.username=postgres
-spring.datasource.password=satriaman
+spring.datasource.url=jdbc:postgresql://swamedia.xyz:35432/dbdevdemo
+spring.datasource.username=dev_demo
+spring.datasource.password=devdemo123#
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
